# ai-website-quality-analyzer

./: .env  .env.example  .gitignore  PLAN.md  pyproject.toml  remote_run.sh  report_085a2276.html  report_1902087b.html  report_803f72ee.html  report_823932b5.html  report_9ee34b91.html  report_a82237ef.html  report_a82274d5.html  report_afe47d67.html  report_americanpackaging_20251225_1056_3229a252.html  report_americanpackaging_20251225_1927_d9bd475f.html  report_d221f7c5.html  report_d2995a35.html  report_ddb3e37c.html  report_example_20251225_1156_2aa06f7a.html  report_f0a9c96b.html  report_f0a9c96b_with_fixes.html  report_savaslabs_20251227_0108_ba0e26d1.html  report_savaslabs_20251227_0713_9e6a1921.html  report_savaslabs_20251227_0725_40d8e4e6.html  report_savaslabs_20251227_0733_b58fdd32.html  run-api-remote.sh  run-remote-batch.sh  run-remote.sh  scan-overnight.sh  sites-overnight.txt  start.sh
.claude/: settings.local.json
data/: website_agent.db
docs/: ARCHITECTURE.md  BACKLOG.md  COMMIT-2025-12-28.md  PHASE2-AUTOFIX.md  STATUS.md
scripts/: deploy.sh  install-service.sh  regenerate-report.py  reset-demo.sh  run_fix_tests.py  run_tests_ec2.sh  run_tests_remote.sh  website-quality-agent.service
src/website_agent/: __init__.py  cli.py  config.py  models.py  slack.py
src/website_agent/analyzers/: __init__.py  accessibility_analyzer.py  base.py  cms_analyzer.py  compliance_analyzer.py  content_analyzer.py  link_analyzer.py  mobile_analyzer.py  performance_analyzer.py  seo_analyzer.py
src/website_agent/api/: __init__.py  app.py  auth.py
src/website_agent/crawler/: __init__.py  playwright_crawler.py  simple_crawler.py
src/website_agent/fixer/: __init__.py  classifier.py  code_fix_generator.py  content_fix_generator.py  drupal_fixer.py  github_client.py  orchestrator.py  run_tracker.py
src/website_agent/reporting/: __init__.py  aggregator.py
src/website_agent/reporting/templates/: base.html  index.html  (+1 more)
src/website_agent/storage/: __init__.py  sqlite_store.py
src/website_quality_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_results/: fix_test_results_20251228_161526.json  fix_test_results_20251228_162826.json  fix_test_results_20251228_170942.json
tests/: __init__.py  test_analyzers.py  test_fix_flow.py  test_models.py  test_reporting.py
