[project]
name = "website-quality-agent"
version = "0.1.0"
description = "Minimal FastAPI dashboard + crawler/analyzers for website quality"
readme = "PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "typer>=0.12.3",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "anyio>=4.4.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
website-agent = "website_agent.cli:entrypoint"

